# bizu-sidebar

./: .gitignore  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
scripts/: build-ico.mjs  rename-bundles.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AppShell.tsx  EmptyState.tsx  SearchField.tsx  SectionBlock.tsx  SegmentedControl.tsx
src/features/notes/: NoteCard.tsx  NoteEditor.tsx
src/features/settings/: SettingsPanel.tsx
src/features/shortcuts/: ShortcutCard.tsx  ShortcutEditor.tsx
src/lib/: desktop.ts  persistence.ts  sampleData.ts
src/store/: useAppStore.ts
src/types/: app.ts
