[package]
name = "bizu-sidebar"
version = "0.1.0"
description = "Sidebar desktop para notas e atalhos."
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "bizu_sidebar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
